Fixed issue with footer not showing at bottom of page. Made contact form messages more stylish. Adjust form style so that recaptcha fits properly

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@ body {
 	width: 100%;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 @font-face {
   font-family: 'Spinnaker';
   src: 	url('./fonts/Spinnaker-Regular.woff2') format('woff'), /* Modern Browsers */
