--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,6 +7,7 @@
 	border-top: 2px solid black;
 	text-align: center;
 	align-items: center;
+	margin-top: auto;
 }
 
 .footerInner {
